--- a/ResourceFolderOk/lib/build.gradle
+++ b/ResourceFolderOk/lib/build.gradle
@@ -1,5 +1,24 @@
 apply plugin: 'java-library'
 
+//sourceSets {
+//    main {
+//        java {
+//            srcDirs = ['src/main/java']
+//        }
+//        resources {
+//            srcDirs = ['src/main/resources']
+//        }
+//    }
+//    test {
+//        java {
+//            srcDirs = ['src/test/java']
+//        }
+//        resources {
+//            srcDirs = ['src/test/resources']
+//        }
+//    }
+//}
+
 dependencies {
     testImplementation 'junit:junit:4.12'
 }
